# arl_step

./: CMakeLists.txt  macospack.sh
Doc/: STEP_v3-User-Manual.docx
License/: ReadMe.txt  a.out  base64_dec.cpp  decoded_signSha256  license.h  license.txt  mk_keys.sh  mk_license.sh  sign.sha256  sign.sha256.base64  step_privkey.pem  step_pubkey.pem  test_verify_license.c  user_info.txt  verify_license.cpp  verify_signature.cpp
License/Save/: mk_license.sh  test_verify_license.c  verify_license.c  verify_license.sh  verify_signature.c
Step/: CMakeLists.txt  Info.plist.in  Step.pro  anglelabel.cpp  anglelabel.h  common_panel_controls.cpp  icons8-music-1024.icns  initRunNextTrial.cpp  main.cpp  main.h  panelab5.cpp  panelab5.h  panelab5.ui  panelab7.cpp  panelab7.h  panelab7.ui  paneladmin.cpp  paneladmin.h  paneladmin.ui  panelbs1116.cpp  panelbs1116.h  panelbs1116.ui  panelmushra.cpp  panelmushra.h  panelmushra.ui  qt_interface.cpp  qt_interface.h  qt_message.cpp  qt_message.h
port/: allTestIncludes.h  cmdline.h  config.h  defineValues.h  license.h  paUtils.h  play.h  portControls.h  session.h  step_cmdline.h  sysFiles.h  testAB.h  testABX.h  testBS1116.h  testBase.h  testMOS.h  testMushra.h  testTrain.h  transBuff.h  transition.h  trialAudioFiles.h  tty_interface.h  utils.h  video.h  wav.h
port_src/: CMakeLists.txt  ReadMe.txt  ReadMeWav.txt  base64_dec.cpp  cmdline.cpp  config.cpp  license.cpp  paUtils.cpp  play.cpp  portControls.cpp  rngs.cpp  session.cpp  step_cmdline.cpp  testAB.cpp  testABX.cpp  testBS1116.cpp  testBase.cpp  testMOS.cpp  testMushra.cpp  testTrain.cpp  transBuff.cpp  trialAudioFiles.cpp  tty_interface.cpp  utils.cpp  video.cpp  wav.cpp
